feat: Ligação da telas e organização do código

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="peso_kg">Peso (Kg)</string>
     <string name="logo_description">Pessoa correndo em azul em cima de uma folha</string>
     <string name="tabela">Tabela</string>
+    <string name="voltar">Voltar</string>
 </resources>
