--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CalculadoraIMC</string>
+    <string name="app_name">Menu UMC-Fit</string>
     
     <string name="dados_pessoais">Dados Pessoais</string>
     <string name="treinos">Treinos</string>
