Criado tela, para editar e cadastrar ativdade, e criado helper para banco de dados

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,13 @@
     <string name="academias_proximas">Academias próximas</string>
 
 
+    <string-array name="tipos_treino">
+        <item>Musculação</item>
+        <item>Aeróbico</item>
+        <item>Natação</item>
+        <!-- Adicione mais tipos de treino, se necessário -->
+    </string-array>
+
+
+
 </resources>
